--- a/WebProject/src/db.properties
+++ b/WebProject/src/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/UserDB
-user=example
-password=123123
+url=jdbc:mysql://localhost:3306/sw
+user=jy
+password=1365
