관리자 로그인 기능 매핑 수정

--- a/WebProject/WebContent/property/commandMapping.properties
+++ b/WebProject/WebContent/property/commandMapping.properties
@@ -1,10 +1,10 @@
 #command = class full name
 #admin area
 ##admin area - main & authorization
-/mg/managerMain.do=bookshop.command.ManagerMainAction
-/mg/managerLoginForm.do=bookshop.command.ManagerLoginFormAction
-/mg/managerLoginPro.do=bookshop.command.ManagerLoginProAction
-/mg/managerLogout.do=bookshop.command.ManagerLogoutAction
+/mg/managerMain.do=com.wedeal.command.ManagerMainAction
+/mg/managerLoginForm.do=com.wedeal.command.ManagerLoginFormAction
+/mg/managerLoginPro.do=com.wedeal.command.ManagerLoginProAction
+/mg/managerLogout.do=com.wedeal.command.ManagerLogoutAction
 ##admin area - manage product
 /mg/bookRegisterForm.do=bookshop.command.BookRegisterFormAction
 /mg/bookRegisterPro.do=bookshop.command.BookRegisterProAction
