--- a/WeDeal/WebContent/property/commandMapping.properties
+++ b/WeDeal/WebContent/property/commandMapping.properties
@@ -1,56 +1,56 @@
 #command = class full name
 #admin area
 ##admin area - main & authorization
-/mg/managerMain.do=wedeal.command.ManagerMainAction
-/mg/managerLoginForm.do=wedeal.command.ManagerLoginFormAction
-/mg/managerLoginPro.do=wedeal.command.ManagerLoginProAction
-/mg/managerLogout.do=wedeal.command.ManagerLogoutAction
+/mg/managerMain.do=bookshop.command.ManagerMainAction
+/mg/managerLoginForm.do=bookshop.command.ManagerLoginFormAction
+/mg/managerLoginPro.do=bookshop.command.ManagerLoginProAction
+/mg/managerLogout.do=bookshop.command.ManagerLogoutAction
 ##admin area - manage product
-/mg/bookRegisterForm.do=wedeal.command.BookRegisterFormAction
-/mg/bookRegisterPro.do=wedeal.command.BookRegisterProAction
-/mg/bookList.do=wedeal.command.BookListAction
-/mg/bookUpdateForm.do=wedeal.command.BookUpdateFormAction
-/mg/bookUpdatePro.do=wedeal.command.BookUpdateProAction
-/mg/bookDeletePro.do=wedeal.command.BookDeleteProAction
+/mg/bookRegisterForm.do=bookshop.command.BookRegisterFormAction
+/mg/bookRegisterPro.do=bookshop.command.BookRegisterProAction
+/mg/bookList.do=bookshop.command.BookListAction
+/mg/bookUpdateForm.do=bookshop.command.BookUpdateFormAction
+/mg/bookUpdatePro.do=bookshop.command.BookUpdateProAction
+/mg/bookDeletePro.do=bookshop.command.BookDeleteProAction
 ##admin area - manage order
-/mg/orderList.do=wedeal.command.OrderListAction
+/mg/orderList.do=bookshop.command.OrderListAction
 
 ##admin area - process QnA
-/mg/qnaList.do=wedeal.command.QnaListAction
-/mg/qnaReplyForm.do=wedeal.command.QnaReplyFormAction
-/mg/qnaReplyPro.do=wedeal.command.QnaReplyProAction
-/mg/qnaReplyUpdateForm.do=wedeal.command.QnaReplyUpdateFormAction
-/mg/qnaReplyUpdatePro.do=wedeal.command.QnaReplyUpdateProAction
+/mg/qnaList.do=bookshop.command.QnaListAction
+/mg/qnaReplyForm.do=bookshop.command.QnaReplyFormAction
+/mg/qnaReplyPro.do=bookshop.command.QnaReplyProAction
+/mg/qnaReplyUpdateForm.do=bookshop.command.QnaReplyUpdateFormAction
+/mg/qnaReplyUpdatePro.do=bookshop.command.QnaReplyUpdateProAction
 
 #user area
 ##user area - display shop
-/index.do=wedeal.command.ShopMainAction
-/list.do=wedeal.command.ProListAction
-/bookContent.do=wedeal.command.BookContentAction
+/index.do=bookshop.command.ShopMainAction
+/list.do=bookshop.command.ProListAction
+/bookContent.do=bookshop.command.BookContentAction
 ##user area - process member
-/registerForm.do=wedeal.command.RegisterFormAction
-/registerPro.do=wedeal.command.RegisterProAction
-/confirmId.do=wedeal.command.ConfirmIdAction
-/loginForm.do=wedeal.command.LoginFormAction
-/loginPro.do=wedeal.command.LoginProAction
-/logout.do=wedeal.command.LogoutAction
-/modify.do=wedeal.command.ModifyAction
-/modifyForm.do=wedeal.command.ModifyFormAction
-/modifyPro.do=wedeal.command.ModifyProAction
-/deletePro.do=wedeal.command.DeleteProAction
+/registerForm.do=bookshop.command.RegisterFormAction
+/registerPro.do=bookshop.command.RegisterProAction
+/confirmId.do=bookshop.command.ConfirmIdAction
+/loginForm.do=bookshop.command.LoginFormAction
+/loginPro.do=bookshop.command.LoginProAction
+/logout.do=bookshop.command.LogoutAction
+/modify.do=bookshop.command.ModifyAction
+/modifyForm.do=bookshop.command.ModifyFormAction
+/modifyPro.do=bookshop.command.ModifyProAction
+/deletePro.do=bookshop.command.DeleteProAction
 ##user area - process qna
-/qnaForm.do=wedeal.command.QnaFormAction
-/qnaPro.do=wedeal.command.QnaProAction
-/qnaUpdateForm.do=wedeal.command.QnaUpdateFormAction
-/qnaUpdatePro.do=wedeal.command.QnaUpdateProAction
-/qnaDeletePro.do=wedeal.command.QnaDeleteProAction
+/qnaForm.do=bookshop.command.QnaFormAction
+/qnaPro.do=bookshop.command.QnaProAction
+/qnaUpdateForm.do=bookshop.command.QnaUpdateFormAction
+/qnaUpdatePro.do=bookshop.command.QnaUpdateProAction
+/qnaDeletePro.do=bookshop.command.QnaDeleteProAction
 ##user area - shopping cart
-/insertCart.do=wedeal.command.InsertCartAction
-/cartList.do=wedeal.command.CartListAction
-/cartUpdateForm.do=wedeal.command.CartUpdateFormAction
-/cartUpdatePro.do=wedeal.command.CartUpdateProAction
-/deleteCart.do=wedeal.command.DeleteCartAction
+/insertCart.do=bookshop.command.InsertCartAction
+/cartList.do=bookshop.command.CartListAction
+/cartUpdateForm.do=bookshop.command.CartUpdateFormAction
+/cartUpdatePro.do=bookshop.command.CartUpdateProAction
+/deleteCart.do=bookshop.command.DeleteCartAction
 ##user area - buy
-/buyForm.do=wedeal.command.BuyFormAction
-/buyPro.do=wedeal.command.BuyProAction
-/buyList.do=wedeal.command.BuyListAction
+/buyForm.do=bookshop.command.BuyFormAction
+/buyPro.do=bookshop.command.BuyProAction
+/buyList.do=bookshop.command.BuyListAction
