대 카테고리 , 소 카테고리 출력 가능

--- a/wedeal/WebContent/property/commandMapping.properties
+++ b/wedeal/WebContent/property/commandMapping.properties
@@ -25,7 +25,7 @@
 #user area
 ##user area - display shop
 /index.do=wedeal.command.ShopMainAction
-/list.do=wedeal.command.ProListAction
+/list.do=wedeal.command.CateListAction
 /bookContent.do=wedeal.command.BookContentAction
 ##user area - process member
 /registerForm.do=wedeal.command.RegisterFormAction
