내방식대로 따른거 다뺌

--- a/WebProject/WebContent/property/commandMapping.properties
+++ b/WebProject/WebContent/property/commandMapping.properties
@@ -1,20 +1,7 @@
 #command = class full name
 #admin area
-##admin area - main & authorization
-/mg/managerMain.do=com.wedeal.command.ManagerMainAction
-/mg/managerLoginForm.do=com.wedeal.command.ManagerLoginFormAction
-/mg/managerLoginPro.do=com.wedeal.command.ManagerLoginProAction
-/mg/managerLogout.do=com.wedeal.command.ManagerLogoutAction
-##admin area - manage product
-/mg/bookRegisterForm.do=com.wedeal.command.BookRegisterFormAction
-/mg/bookRegisterPro.do=com.wedeal.command.BookRegisterProAction
-/mg/bookList.do=com.wedeal.command.BookListAction
-/mg/bookUpdateForm.do=com.wedeal.command.BookUpdateFormAction
-/mg/bookUpdatePro.do=com.wedeal.command.BookUpdateProAction
-/mg/bookDeletePro.do=com.wedeal.command.BookDeleteProAction
-##admin area - manage order
-/mg/orderList.do=com.wedeal.command.OrderListAction
-
+##admin area - process Menu
+/mg/menuPro.do=com.wedeal.command.menuProAction
 ##admin area - process QnA
 /mg/qnaList.do=com.wedeal.command.QnaListAction
 /mg/qnaReplyForm.do=com.wedeal.command.QnaReplyFormAction
