--- a/newWebProject/WebContent/WEB-INF/web.xml
+++ b/newWebProject/WebContent/WEB-INF/web.xml
@@ -1,24 +1,227 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>good</display-name>
-  <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-  </welcome-file-list>
- 
-  <servlet>
-      <servlet-name>LoginAction</servlet-name>
-      <servlet-class>wedeal.control.LoginAction</servlet-class>
-  </servlet>
-  <servlet><servlet-name>RegisterAction</servlet-name>
-      <servlet-class>wedeal.control.RegisterAction</servlet-class>
-  </servlet>
-  <servlet-mapping>
-      <servlet-name>LoginAction</servlet-name>
-      <url-pattern>/LoginAction</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>RegisterAction</servlet-name>
-  	<url-pattern>/RegisterAction</url-pattern>
-  </servlet-mapping>
- 
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>good</display-name>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<servlet-name>BoardDeleteAction</servlet-name>
+		<servlet-class>wedeal.control.BoardDeleteAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardDeleteAction</servlet-name>
+		<url-pattern>/BoardDeleteAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>BoardUpdateAction</servlet-name>
+		<servlet-class>wedeal.control.BoardUpdateAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardUpdateAction</servlet-name>
+		<url-pattern>/BoardUpdateAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>BoardWriteAction</servlet-name>
+		<servlet-class>wedeal.control.BoardWriteAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>BoardWriteAction</servlet-name>
+		<url-pattern>/BoardWriteAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CategorySearchAction</servlet-name>
+		<servlet-class>wedeal.control.CategorySearchAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CategorySearchAction</servlet-name>
+		<url-pattern>/CategorySearchAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CommnetDeleteAction</servlet-name>
+		<servlet-class>wedeal.control.CommnetDeleteAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CommnetDeleteAction</servlet-name>
+		<url-pattern>/CommnetDeleteAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CommnetUpdateAction</servlet-name>
+		<servlet-class>wedeal.control.CommnetUpdateAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CommnetUpdateAction</servlet-name>
+		<url-pattern>/CommnetUpdateAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>CommnetWriteAction</servlet-name>
+		<servlet-class>wedeal.control.CommnetWriteAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CommnetWriteAction</servlet-name>
+		<url-pattern>/CommnetWriteAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>ConfirmIdAction</servlet-name>
+		<servlet-class>wedeal.control.ConfirmIdAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>ConfirmIdAction</servlet-name>
+		<url-pattern>/ConfirmIdAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>DeclarationAction</servlet-name>
+		<servlet-class>wedeal.control.DeclarationAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>DeclarationAction</servlet-name>
+		<url-pattern>/DeclarationAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>LikeAction</servlet-name>
+		<servlet-class>wedeal.control.LikeAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LikeAction</servlet-name>
+		<url-pattern>/LikeAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>LoginAction</servlet-name>
+		<servlet-class>wedeal.control.LoginAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LoginAction</servlet-name>
+		<url-pattern>/LoginAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>LogoutAction</servlet-name>
+		<servlet-class>wedeal.control.LogoutAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>LogoutAction</servlet-name>
+		<url-pattern>/LogoutAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>RegisterAction</servlet-name>
+		<servlet-class>wedeal.control.RegisterAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>RegisterAction</servlet-name>
+		<url-pattern>/RegisterAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>MngrBanAction</servlet-name>
+		<servlet-class>wedeal.control.MngrBanAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MngrBanAction</servlet-name>
+		<url-pattern>/MngrBanAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>MngrDeclarAction</servlet-name>
+		<servlet-class>wedeal.control.MngrDeclarAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MngrDeclarAction</servlet-name>
+		<url-pattern>/MngrDeclarAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>MngrMenuAction</servlet-name>
+		<servlet-class>wedeal.control.MngrMenuAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MngrMenuAction</servlet-name>
+		<url-pattern>/MngrMenuAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>MngrStaffAction</servlet-name>
+		<servlet-class>wedeal.control.MngrStaffAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MngrStaffAction</servlet-name>
+		<url-pattern>/MngrStaffAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>MngrUserAction</servlet-name>
+		<servlet-class>wedeal.control.MngrUserAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MngrUserAction</servlet-name>
+		<url-pattern>/MngrUserAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>MngrUserBanAction</servlet-name>
+		<servlet-class>wedeal.control.MngrUserBanAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MngrUserBanAction</servlet-name>
+		<url-pattern>/MngrUserBanAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>SearchAction</servlet-name>
+		<servlet-class>wedeal.control.SearchAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SearchAction</servlet-name>
+		<url-pattern>/SearchAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UserBoardListAction</servlet-name>
+		<servlet-class>wedeal.control.UserBoardListAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserBoardListAction</servlet-name>
+		<url-pattern>/UserBoardListAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UserCommentListAction</servlet-name>
+		<servlet-class>wedeal.control.UserCommentListAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserCommentListAction</servlet-name>
+		<url-pattern>/UserCommentListAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UserDeleteAction</servlet-name>
+		<servlet-class>wedeal.control.UserDeleteAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserDeleteAction</servlet-name>
+		<url-pattern>/UserDeleteAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UserLikeListAction</servlet-name>
+		<servlet-class>wedeal.control.UserLikeListAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserLikeListAction</servlet-name>
+		<url-pattern>/UserLikeListAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UserPassWdModifyAction</servlet-name>
+		<servlet-class>wedeal.control.UserPassWdModifyAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserPassWdModifyAction</servlet-name>
+		<url-pattern>/UserPassWdModifyAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UserPhoneModifyAction</servlet-name>
+		<servlet-class>wedeal.control.UserPhoneModifyAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserPhoneModifyAction</servlet-name>
+		<url-pattern>/UserPhoneModifyAction</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UserWithDrawAction</servlet-name>
+		<servlet-class>wedeal.control.UserWithDrawAction</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UserWithDrawAction</servlet-name>
+		<url-pattern>/UserWithDrawAction</url-pattern>
+	</servlet-mapping>
+
 </web-app>
